--- a/common/package.json
+++ b/common/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@mujtaba-fyp/common",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rimraf --glob ./dist/*",
     "build": "npm run clean && tsc",
