--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /dist
 
 # Logs
-logs
+**logs
 *.log
 npm-debug.log*
 pnpm-debug.log*
@@ -19,15 +19,6 @@ lerna-debug.log*
 **.env.stage.prod
 **.env.docker
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
@@ -35,3 +26,5 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# misc
+track.md
