updated common module + auth service

--- a/auth/package.json
+++ b/auth/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@mujtaba-fyp/common": "^1.0.6",
+    "@mujtaba-web/common": "^1.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
