--- a/mail/package.json
+++ b/mail/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "cross-env": "^7.0.3",
+    "node-nats-streaming": "^0.3.2",
     "nodemailer": "^6.9.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
