--- a/auth/package.json
+++ b/auth/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@mujtaba-web/common": "^1.0.20",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
@@ -27,6 +28,8 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^9.0.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "node-nats-streaming": "^0.3.2",
     "reflect-metadata": "^0.1.13",
