--- a/auth/.prettierrc
+++ b/auth/.prettierrc
@@ -1,13 +1,6 @@
 {
   "singleQuote": true,
+  "semi": false,
   "trailingComma": "all",
-  "overrides": [
-    {
-      "files": ["**/*.hbs"],
-      "options": {
-        "singleQuote": true,
-        "parser": "glimmer"
-      }
-    }
-  ]
 }
+
