--- a/website/package.json
+++ b/website/package.json
@@ -21,12 +21,12 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@mujtaba-web/common": "^1.1.25",
+    "@mujtaba-web/common": "^1.1.27",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "reflect-metadata": "^0.1.13",
