--- a/auth/package.json
+++ b/auth/package.json
@@ -33,8 +33,7 @@
     "cross-env": "^7.0.3",
     "node-nats-streaming": "^0.3.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "winston": "^3.10.0"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
