--- a/auth/package.json
+++ b/auth/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
