--- a/storage/package.json
+++ b/storage/package.json
@@ -32,6 +32,7 @@
     "@types/multer": "^1.4.7",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "mongoose-update-if-current": "^1.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
