--- a/website-users/package.json
+++ b/website-users/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website",
+  "name": "storage",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@mujtaba-web/common": "^1.1.37",
+    "@mujtaba-web/common": "^1.1.26",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
-    "class-transformer": "^0.5.1",
+    "@types/multer": "^1.4.7",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "mongoose-update-if-current": "^1.4.0",
