--- a/auth/package.json
+++ b/auth/package.json
@@ -20,8 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@dine_ease/common": "^1.0.6",
     "@hapi/joi": "^17.1.1",
-    "@mujtaba-shafiq/common": "^1.0.1",
     "@nestjs-plugins/nestjs-nats-streaming-transport": "^1.2.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
@@ -35,6 +35,8 @@
     "cross-env": "^7.0.3",
     "mongoose": "^7.5.2",
     "mongoose-update-if-current": "^1.4.0",
+    "nest": "^0.1.6",
+    "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
@@ -44,7 +46,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
-    "@types/node": "18.16.12",
+    "@types/node": "^18.16.12",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
