--- a/users/package.json
+++ b/users/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-main",
+  "name": "users",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -20,30 +20,33 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@dine_ease/common": "^1.0.7",
+    "@dine_ease/common": "^1.0.8",
+    "@hapi/joi": "^17.1.1",
     "@nestjs-plugins/nestjs-nats-streaming-transport": "^1.2.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.4.3",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
-    "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "mongoose": "^7.5.2",
     "mongoose-update-if-current": "^1.4.0",
-    "nest": "^0.1.6",
     "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "twilio": "^4.18.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/hapi__joi": "^17.1.11",
     "@types/jest": "29.5.1",
-    "@types/node": "^18.16.12",
+    "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
