--- a/mail/package.json
+++ b/mail/package.json
@@ -21,18 +21,18 @@
   },
   "dependencies": {
     "@dine_ease/common": "^1.0.8",
+    "@hapi/joi": "^17.1.1",
     "@nestjs-plugins/nestjs-nats-streaming-transport": "^1.2.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^10.1.1",
     "@nestjs/microservices": "^9.4.3",
-    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/hapi__joi": "^17.1.11",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
-    "mongoose": "^7.5.2",
-    "mongoose-update-if-current": "^1.4.0",
     "nest-winston": "^1.9.4",
+    "nodemailer": "^6.9.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "winston": "^3.10.0"
