--- a/mail/package.json
+++ b/mail/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@dine_ease/common": "^1.0.8",
     "@hapi/joi": "^17.1.1",
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs-plugins/nestjs-nats-streaming-transport": "^1.2.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
+    "@types/nodemailer": "^6.4.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
