updated dockerfile and conf

--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -14,10 +14,18 @@ spec:
     spec:
       containers:
         - name: auth
-          image: dine-ease/auth
+          image: mujtabashafiq/dine-ease:auth
           env:
             - name: MONGO_URI
               value: "mongodb://auth-mongo-srv:27017/auth"
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                   fieldPath: metadata.name
+            - name: NATS_URL
+              value: "http://nats-srv:4222"
+            - name: NATS_CLUSTER_ID
+              value: dine-ease
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
