--- a/infra/k8s/users-depl.yaml
+++ b/infra/k8s/users-depl.yaml
@@ -14,10 +14,18 @@ spec:
     spec:
       containers:
         - name: users
-          image: dine-ease/users
+          image: mujtabashafiq/dine-ease:users
           env:
             - name: MONGO_URI
               value: "mongodb://users-mongo-srv:27017/users"
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                   fieldPath: metadata.name
+            - name: NATS_URL
+              value: "http://nats-srv:4222"
+            - name: NATS_CLUSTER_ID
+              value: dine-ease
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
