--- a/restaurant/package.json
+++ b/restaurant/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "users",
+  "name": "restaurant",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -23,6 +23,7 @@
     "@dine_ease/common": "^1.0.8",
     "@nestjs-plugins/nestjs-nats-streaming-transport": "^1.2.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/microservices": "^9.4.3",
@@ -33,8 +34,10 @@
     "mongoose": "^7.5.2",
     "mongoose-update-if-current": "^1.4.0",
     "nest-winston": "^1.9.4",
+    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "twilio": "^4.18.1",
     "winston": "^3.10.0"
   },
   "devDependencies": {
