--- a/mail/package.json
+++ b/mail/package.json
@@ -32,6 +32,7 @@
     "@types/hapi__joi": "^17.1.11",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "mongoose-update-if-current": "^1.4.0",
     "nest-winston": "^1.9.4",
     "nodemailer": "^6.9.5",
     "reflect-metadata": "^0.1.13",
