--- a/storage/package.json
+++ b/storage/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "mongoose": "^7.5.2",
+    "mongoose-update-if-current": "^1.4.0",
     "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
