--- a/users/package.json
+++ b/users/package.json
@@ -32,7 +32,9 @@
     "cross-env": "^7.0.3",
     "mongoose": "^7.5.2",
     "mongoose-update-if-current": "^1.4.0",
+    "nanoid": "^3.3.4",
     "nest-winston": "^1.9.4",
+    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "winston": "^3.10.0"
