--- a/restaurant/package.json
+++ b/restaurant/package.json
@@ -23,7 +23,6 @@
     "@dine_ease/common": "^1.0.8",
     "@nestjs-plugins/nestjs-nats-streaming-transport": "^1.2.0",
     "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/microservices": "^9.4.3",
@@ -37,6 +36,7 @@
     "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "slugify": "^1.6.6",
     "twilio": "^4.18.1",
     "winston": "^3.10.0"
   },
