skaffold added + k8s confg added + minor updates

--- a/.gitignore
+++ b/.gitignore
@@ -19,13 +19,12 @@ lerna-debug.log*
 **.env.stage.prod
 **.env.docker
 
+# Ignore Kubernetes Secrets YAML file
+**infra/k8s/config/secrets.yaml
+
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
-# misc
-extra.md
-# track.md
