--- a/auth/package.json
+++ b/auth/package.json
@@ -20,14 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@dine_ease/common": "^1.0.7",
-    "@nestjs-plugins/nestjs-nats-streaming-transport": "^1.2.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/microservices": "^9.4.3",
-    "@nestjs/mongoose": "^10.0.1",
-    "@nestjs/platform-express": "^9.0.0",
+    "@dine_ease/common": "^1.0.91",
+    "@nestjs-plugins/nestjs-nats-streaming-transport": "^1.3.0",
+    "@nestjs/common": "^10.3.1",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.1",
+    "@nestjs/microservices": "^10.3.1",
+    "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/platform-express": "^10.3.1",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "mongoose": "^7.5.2",
@@ -38,9 +40,9 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^10.3.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "^18.16.12",
