--- a/restaurant/Dockerfile
+++ b/restaurant/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 # Copy the package.json and package-lock.json files to the container
 COPY package*.json ./
 
-# Install project dependencies (excluding dev dependencies)
+# Install project dependencies
 RUN npm install
 
 # Copy the application code to the container
