packages updated + k8s updated

--- a/infra/k8s/nginx/ingress-srv.yaml
+++ b/infra/k8s/nginx/ingress-srv.yaml
@@ -17,3 +17,52 @@ spec:
                 name: auth-srv
                 port:
                   number: 3000
+          - path: /api/dining-plan/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: dining-plans-srv
+                port:
+                  number: 3000
+          - path: /api/login/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: login-gateway-srv
+                port:
+                  number: 3000
+          - path: /api/mail/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: mail-srv
+                port:
+                  number: 3000
+          - path: /api/map/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: map-srv
+                port:
+                  number: 3000
+          - path: /api/user/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: users-srv
+                port:
+                  number: 3000
+          - path: /api/plan/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: subscriptions-srv
+                port:
+                  number: 3000
+          - path: /api/subscription/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: subscriptions-srv
+                port:
+                  number: 3000
