--- a/login-gateway/package.json
+++ b/login-gateway/package.json
@@ -21,9 +21,10 @@
   },
   "dependencies": {
     "@dine_ease/common": "^1.0.7",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/common": "^10.3.1",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.1",
+    "@nestjs/platform-express": "^10.3.1",
     "axios": "^1.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
@@ -33,9 +34,9 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^10.3.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "^18.16.12",
