--- a/notifications/package.json
+++ b/notifications/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^10.3.1",
     "@nestjs/platform-socket.io": "^10.3.1",
     "@nestjs/websockets": "^10.3.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "mongoose": "^7.5.2",
@@ -40,6 +41,7 @@
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.7.4",
     "winston": "^3.10.0"
   },
   "devDependencies": {
