--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,16 +2,16 @@ apiVersion: skaffold/v4beta6
 kind: Config
 manifests:
   rawYaml:
-    # - ./infra/k8s/**/*.yaml
-    - ./infra/k8s/nats/*.yaml
-    - ./infra/k8s/nginx/*.yaml
-    - ./infra/k8s/client/*.yaml
-    - ./infra/k8s/auth/auth-depl.yaml
-    - ./infra/k8s/mail/mail-depl.yaml
-    - ./infra/k8s/users/users-depl.yaml
-    - ./infra/k8s/login-gateway/*.yaml
-    - ./infra/k8s/notifications/notifications-depl.yaml
-    - ./infra/k8s/notifications/notifications-redis-depl.yaml
+    - ./infra/k8s/**/*.yaml
+    # - ./infra/k8s/nats/*.yaml
+    # - ./infra/k8s/nginx/*.yaml
+    # - ./infra/k8s/client/*.yaml
+    # - ./infra/k8s/auth/auth-depl.yaml
+    # - ./infra/k8s/mail/mail-depl.yaml
+    # - ./infra/k8s/users/users-depl.yaml
+    # - ./infra/k8s/login-gateway/*.yaml
+    # - ./infra/k8s/notifications/notifications-depl.yaml
+    # - ./infra/k8s/notifications/notifications-redis-depl.yaml
 metadata:
   name: dine-ease-backend
 build:
@@ -60,6 +60,46 @@ build:
             dest: .
     - image: mujtabashafiq/dine-ease-notifications
       context: notifications
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-dining-plans
+      context: dining-plans
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-map
+      context: map
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-subscriptions
+      context: subscriptions
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-reviews
+      context: reviews
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-restaurants
+      context: restaurants
       docker:
         dockerfile: Dockerfile
       sync:
