only taxId is unique now + dto changes read TRACK.md

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -6,11 +6,16 @@ manifests:
     - ./infra/k8s/nats/*.yaml
     - ./infra/k8s/nginx/*.yaml
     - ./infra/k8s/config/*.yaml
-    - ./infra/k8s/reviews/*.yaml
+    # - ./infra/k8s/reviews/*.yaml
     - ./infra/k8s/restaurants/*.yaml
     - ./infra/k8s/map/*.yaml
     - ./infra/k8s/subscriptions/*.yaml
     - ./infra/k8s/dining-plans/*.yaml
+    # - ./infra/k8s/notifications/*.yaml
+    # - ./infra/k8s/login-gateway/*.yaml
+    # - ./infra/k8s/users/*.yaml
+    # - ./infra/k8s/mail/*.yaml
+    # - ./infra/k8s/auth/*.yaml
 metadata:
   name: dine-ease-backend
 build:
@@ -89,14 +94,14 @@ build:
         manual:
           - src: "**/*.ts"
             dest: .
-    - image: mujtabashafiq/dine-ease-reviews
-      context: reviews
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: "**/*.ts"
-            dest: .
+    # - image: mujtabashafiq/dine-ease-reviews
+    #   context: reviews
+    #   docker:
+    #     dockerfile: Dockerfile
+    #   sync:
+    #     manual:
+    #       - src: "**/*.ts"
+    #         dest: .
     - image: mujtabashafiq/dine-ease-restaurants
       context: restaurants
       docker:
