--- a/infra/k8s/notifications/notifications-depl.yaml
+++ b/infra/k8s/notifications/notifications-depl.yaml
@@ -18,7 +18,10 @@ spec:
           env:
             - name: MONGO_URI
               # value: "mongodb://notifications-mongo-srv:27017/notifications"
-              value: notifications
+              valueFrom:
+                secretKeyRef:
+                  name: dine-ease-secrets
+                  key: MONGO_NOTIFICATIONS_URI
             - name: NATS_CLIENT_ID
               valueFrom:
                 fieldRef:
@@ -34,11 +37,6 @@ spec:
                 secretKeyRef:
                   name: dine-ease-secrets
                   key: JWT_KEY
-            - name: MONGO_CONNECTION
-              valueFrom:
-                secretKeyRef:
-                  name: dine-ease-secrets
-                  key: MONGO_CONNECTION
 ---
 apiVersion: v1
 kind: Service
