--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,74 +2,61 @@ apiVersion: skaffold/v4beta6
 kind: Config
 manifests:
   rawYaml:
-    # - ./infra/k8s/**/*.yaml
-    - ./infra/k8s/nats/*.yaml
-    - ./infra/k8s/nginx/*.yaml
-    - ./infra/k8s/config/*.yaml
-    # - ./infra/k8s/reviews/*.yaml
-    - ./infra/k8s/restaurants/*.yaml
-    - ./infra/k8s/map/*.yaml
-    - ./infra/k8s/subscriptions/*.yaml
-    - ./infra/k8s/dining-plans/*.yaml
-    # - ./infra/k8s/notifications/*.yaml
-    # - ./infra/k8s/login-gateway/*.yaml
-    # - ./infra/k8s/users/*.yaml
-    # - ./infra/k8s/mail/*.yaml
-    # - ./infra/k8s/auth/*.yaml
+    - ./infra/k8s/**/*.yaml
 metadata:
   name: dine-ease-backend
 build:
   local: 
     push: false
   artifacts:
-    # - image: mujtabashafiq/dine-ease-client
-    #   context: ../dine-ease-frontend
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: '**/*.js'
-    #         dest: .
-    # - image: mujtabashafiq/dine-ease-auth
-    #   context: auth
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: "**/*.ts"
-    #         dest: .
-    # - image: mujtabashafiq/dine-ease-mail
-    #   context: mail
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: "**/*.ts"
-    #         dest: .
-    # - image: mujtabashafiq/dine-ease-users
-    #   context: users
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: "**/*.ts"
-    #         dest: .
-    # - image: mujtabashafiq/dine-ease-login-gateway
-    #   context: login-gateway
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: "**/*.ts"
-    #         dest: .
-    # - image: mujtabashafiq/dine-ease-notifications
-    #   context: notifications
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: "**/*.ts"
-    #         dest: .
+    - image: mujtabashafiq/dine-ease-client
+      context: ../dine-ease-frontend
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '**/*.js'
+            dest: .
+    - image: mujtabashafiq/dine-ease-auth
+      context: auth
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-mail
+      context: mail
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-users
+      context: users
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-login-gateway
+      context: login-gateway
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-notifications
+      context: notifications
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
     - image: mujtabashafiq/dine-ease-dining-plans
       context: dining-plans
       docker:
@@ -94,14 +81,14 @@ build:
         manual:
           - src: "**/*.ts"
             dest: .
-    # - image: mujtabashafiq/dine-ease-reviews
-    #   context: reviews
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: "**/*.ts"
-    #         dest: .
+    - image: mujtabashafiq/dine-ease-reviews
+      context: reviews
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
     - image: mujtabashafiq/dine-ease-restaurants
       context: restaurants
       docker:
