--- a/infra/k8s/nginx/ingress-srv.yaml
+++ b/infra/k8s/nginx/ingress-srv.yaml
@@ -4,7 +4,8 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/proxy-timeout: "60s"
 spec:
   rules:
     - host: dine-ease.dev
