--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -3,32 +3,34 @@ kind: Config
 manifests:
   rawYaml:
     # - ./infra/k8s/**/*.yaml
-    - ./infra/k8s/client/*.yaml
-    - ./infra/k8s/config/*.yaml
-    - ./infra/k8s/nginx/*.yaml
-    - ./infra/k8s/nats/*.yaml
+    # - ./infra/k8s/client/*.yaml
+    # - ./infra/k8s/config/*.yaml
+    # - ./infra/k8s/nginx/*.yaml
+    # - ./infra/k8s/nats/*.yaml
+    - ./infra/k8s/auth/*.yaml
+    - ./infra/k8s/reviews/*.yaml
 metadata:
   name: dine-ease-backend
 build:
   local: 
     push: false
   artifacts:
-    - image: mujtabashafiq/dine-ease-client
-      context: ../dine-ease-frontend
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: '**/*.js'
-            dest: .
-    # - image: mujtabashafiq/dine-ease-auth
-    #   context: auth
+    # - image: mujtabashafiq/dine-ease-client
+    #   context: ../dine-ease-frontend
     #   docker:
     #     dockerfile: Dockerfile
     #   sync:
     #     manual:
-    #       - src: "**/*.ts"
+    #       - src: '**/*.js'
     #         dest: .
+    - image: mujtabashafiq/dine-ease-auth
+      context: auth
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
     # - image: mujtabashafiq/dine-ease-mail
     #   context: mail
     #   docker:
@@ -85,14 +87,14 @@ build:
     #     manual:
     #       - src: "**/*.ts"
     #         dest: .
-    # - image: mujtabashafiq/dine-ease-reviews
-    #   context: reviews
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: "**/*.ts"
-    #         dest: .
+    - image: mujtabashafiq/dine-ease-reviews
+      context: reviews
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
     # - image: mujtabashafiq/dine-ease-restaurants
     #   context: restaurants
     #   docker:
